@@ -3,7 +3,6 @@ package com.intellij.openapi.updateSettings.impl
 
 import com.intellij.DynamicBundle
 import com.intellij.ide.IdeBundle
-import com.intellij.ide.plugins.newui.PluginUiModel
 import com.intellij.ide.util.DelegatingProgressIndicator
 import com.intellij.openapi.application.PathManager
 import com.intellij.openapi.components.service
@@ -11,11 +10,11 @@ import com.intellij.openapi.diagnostic.logger
 import com.intellij.openapi.progress.ProcessCanceledException
 import com.intellij.openapi.progress.ProgressIndicator
 import com.intellij.openapi.progress.ProgressManager
-import com.intellij.openapi.project.Project
 import com.intellij.openapi.util.BuildNumber
 import com.intellij.openapi.util.io.NioFiles
 import com.intellij.platform.ide.customization.ExternalProductResourceUrls
 import com.intellij.util.concurrency.annotations.RequiresBackgroundThread
+import com.intellij.util.currentJavaVersion
 import com.intellij.util.io.HttpRequests
 import com.intellij.util.system.OS
 import org.jetbrains.annotations.ApiStatus
@@ -25,9 +24,9 @@ import java.nio.file.Path
 import java.nio.file.StandardCopyOption
 import java.util.zip.ZipException
 import java.util.zip.ZipFile
-import javax.swing.JComponent
 import javax.swing.UIManager
 
+@Suppress("UseOptimizedEelFunctions")
 @ApiStatus.Internal
 object UpdateInstaller {
   const val UPDATER_MAIN_CLASS: String = "com.intellij.updater.Runner"
@@ -158,6 +157,7 @@ object UpdateInstaller {
 
     args += jre.resolve(if (OS.CURRENT == OS.Windows) "bin\\java.exe" else "bin/java").toString()
     args += "-Xmx${2000}m"
+    currentJavaVersion().takeIf { it.feature >= 25 }?.let { args += "--enable-native-access=ALL-UNNAMED" }
     args += "-cp"
     args += patchFiles.last().toString()
 
